<package>
 <name>ras_arduino_msgs</name>
  <version>0.0.0</version>
  <description>
    This package contains message (.msg) definitions for interfacing via ROS with motors and sensors on the Arduino.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ras_arduino_msgs</url>

  <author email="germain.haessig@ens-cachan.fr">Germain Haessig</author>
  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>

</package>

